# lexter

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README_bbs.txt  acconfig.h  acinclude.m4  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  lexter.spec  lexter.spec.in
data/: Makefile  Makefile.am  Makefile.in  dict.en  dict.fr
intl/: Makefile
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  lexter.pot
src/: Makefile  Makefile.am  Makefile.in  dict.c  dict.h  iface.h  lang.c  lang.h  lexter.6  lexter.6.in  lexter.c  lexter.h  list.c  list.h  scores.c  scores.h  scorestuff.h  text.c  words.c  words.h
